Bug 56876 - VDPAU error on CAYMAN
Summary: VDPAU error on CAYMAN
Status: RESOLVED FIXED
Alias: None
Product: DRI
Classification: Unclassified
Component: DRM/Radeon (show other bugs)
Version: XOrg git
Hardware: x86-64 (AMD64) Linux (All)
: medium normal
Assignee: Default DRI bug account
QA Contact:
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-11-08 13:48 UTC by Thomas Rohloff
Modified: 2012-11-19 08:43 UTC (History)
1 user (show)

See Also:
i915 platform:
i915 features:


Attachments
A video showing the destroyed video. (165.92 KB, video/mp4)
2012-11-08 15:09 UTC, Thomas Rohloff
no flags Details
Xorg.0.log (53.02 KB, text/plain)
2012-11-08 15:11 UTC, Thomas Rohloff
no flags Details
dmesg (177.43 KB, text/plain)
2012-11-08 15:11 UTC, Thomas Rohloff
no flags Details
fix (1.58 KB, patch)
2012-11-08 15:15 UTC, Alex Deucher
no flags Details | Splinter Review

Description Thomas Rohloff 2012-11-08 13:48:11 UTC
This is with newest version from GIT and kernel 3.7-rc4. if I try to watch for example DVB-T with kaffeine and use VDPAU for decoding my dmesg get spamed with this:
[drm:evergreen_vm_reg_valid] *ERROR* Invalid register 0x84fc in CS
and the TV image is totaly destroyed.
Comment 1 Alex Deucher 2012-11-08 14:59:56 UTC
please attach your xorg log and dmesg output.
Comment 2 Thomas Rohloff 2012-11-08 15:09:47 UTC
Created attachment 69705 [details]
A video showing the destroyed video.

You can also watch this on Vimeo: https://vimeo.com/53081812
Comment 3 Thomas Rohloff 2012-11-08 15:11:05 UTC
Created attachment 69706 [details]
Xorg.0.log
Comment 4 Thomas Rohloff 2012-11-08 15:11:46 UTC
Created attachment 69707 [details]
dmesg
Comment 5 Alex Deucher 2012-11-08 15:15:45 UTC
Created attachment 69708 [details] [review]
fix

This patch should fix the issue.
Comment 6 Thomas Rohloff 2012-11-08 15:35:32 UTC
Thanks, the video is still flickering and has some issues, but at least it works. :)
Comment 7 Thomas Rohloff 2012-11-08 16:05:14 UTC
Could it be that deinterlaceing is bugged? Cause as soon as I enable it the video slows down but doesn't look deinterlased.
Comment 8 Florian Mickler 2012-11-11 18:55:42 UTC
A patch referencing this bug report has been merged in Linux v3.7-rc5:

commit 860fe2f05fa2eacac84368e23547ec8cf3cc6652
Author: Alex Deucher <alexander.deucher@amd.com>
Date:   Thu Nov 8 10:08:04 2012 -0500

    drm/radeon/cayman: add some missing regs to the VM reg checker
Comment 9 Michel Dänzer 2012-11-19 08:43:54 UTC
Resolving per comment #8.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.